Player move endpoint
